HDFS: add WriteReadTest